# splatline

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh
configs/: per-subject.example.yaml
scripts/: fetch_weights.sh
splatline/: __init__.py  _proc.py  _weights.py  cli.py  config.py  env_check.py  pipeline.py  preflight.py  presets.py
splatline/effects/: __init__.py  blend.py  collage.py
splatline/stages/: __init__.py  compress.py  ingest.py  sfm.py  stylize.py  train.py
